src/pages/ru/v1.25.0/configuration/proxy-settings.mdx
---
title: "Настройки прокси"
metaTitle: "Настройки прокси"
metaDescription: "Настройки для запуска OpenReplay за прокси, таким как NGINX или Apache2."
---

## Размещение OpenReplay вместе с другими приложениями с помощью обратного прокси

Когда OpenReplay запущен на машине, он использует порт 80/443 для предоставления доступа к приложению. Но когда вы используете обратный прокси, OpenReplay можно настроить на использование другого порта для доступа к приложению. Ниже описаны шаги, как это сделать:

1. Отредактируйте файл конфигурации:

```bash
openreplay -e
```

2. Измените раздел конфигурации nginx:

```yaml
ingress-nginx: &ingress-nginx
  controller:
	...
	...
    service:
      externalTrafficPolicy: "Local"
      ports:
        http: 880   # Change this port for http
        https: 8443 # Change this port for https
```
3. Сохраните и выйдите из конфигурации с помощью `:wq`, чтобы OpenReplay смог перезагрузить конфигурацию.

После этого можно настроить ваш обратный прокси. Обратитесь к разделам ниже, чтобы это сделать.

### Настройки NGINX

Убедитесь, что ваш прокси отправляет заголовки `X-Forwarded-For` и `X-Forwarded-Proto`. Для работы OpenReplay также должен быть включён SSL. Остальная часть конфигурации должна выглядеть так:

```nginx
location / {
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header Host $http_host;
        proxy_redirect off;
        proxy_pass http://1.2.3.4:880; # replace with OpenReplay instance IP
    }
```

### Настройки Apache2

Убедитесь, что модули `proxy`, `proxy_http` и `proxy_html` включены. SSL также должен быть настроен, остальные параметры должны быть похожи на следующие:

```
<VirtualHost *:443>
    ProxyPass / http://1.2.3.4:880 <!-- replace with instance IP -->
    RequestHeader set X-Forwarded-Proto expr=%{REQUEST_SCHEME}
    # SSL + other config here
</VirtualHost>
```

## Публичные эндпоинты

Если вы защищаете свой экземпляр OpenReplay с помощью прокси, убедитесь, что указанные ниже эндпоинты публично доступны, чтобы OpenReplay работал корректно.

| Эндпоинт | Описание | Источник |
|----------|-------------|------------|
| /ingest | Для приёма событий и записей, поступающих из вашего приложения | Ваше отслеживаемое приложение(я) (если оно доступно публично, то этот эндпоинт также должен быть публичным) |
| /ws-assist | Для воспроизведения сессий в реальном времени с конечными пользователями (WebSocket) | Ваше отслеживаемое приложение(я) (если оно доступно публично, то этот эндпоинт также должен быть публичным) |
| /api | Для аутентификации и получения сессий, проектов, RBAC и данных учётной записи | Панель управления OpenReplay |
| /v2/api | Для поиска, аналитики, воспроизведения сессий и совместного просмотра | Панель управления OpenReplay |
| /spots | Для получения видео spot из объектного хранилища | Панель управления OpenReplay |
| /mobs | Для получения записей сессий из объектного хранилища | Панель управления OpenReplay |
| /sessions-assets | Для получения кэшированных таблиц стилей и шрифтов из объектного хранилища | Панель управления OpenReplay |
| /static | Для получения данных, связанных с сессиями совместного просмотра | Панель управления OpenReplay |
| /records | Для получения записей совместного просмотра из объектного хранилища | Панель управления OpenReplay |
| /integrations | Для получения логов из сторонних интеграций (таких как Sentry или Datadog) | Панель управления OpenReplay |
| /sourcemaps | Для загрузки sourcemaps | CLI Sourcemaps |
| /spot | Для получения данных, связанных с записями spot | Расширение Chrome для Spot |
| /script | Полезно, если вы хотите раздавать файлы openreplay-*.js из своей установки (в противном случае по умолчанию используется CDN OpenReplay) | Ваше отслеживаемое приложение(я) |

## Остались вопросы?

Если у вас есть вопросы об этом процессе, не стесняйтесь обращаться к нам в нашем [Slack](https://slack.openreplay.com) или загляните на наш [Форум](https://forum.openreplay.com).
